--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "domvsit-pdi23-clients"]
 	path = domvsit-pdi23-clients
 	url = https://github.com/niccampanelli/domvsit-pdi23-clients.git
+[submodule "domvsit-pdi23-portal"]
+	path = domvsit-pdi23-portal
+	url = https://github.com/niccampanelli/domvsit-pdi23-portal.git
